# dispatch-demo

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  build.sh
include/: DispatchKey.h  DispatchKeySet.h  Dispatcher.h  IValue.h  OperatorHandle.h  TensorImpl.h
src/: DispatchKeySet.cpp  Dispatcher.cpp  IValue.cpp  OperatorHandle.cpp  TensorImpl.cpp  main.cpp
